tests/miniJava/neg/000162_mutation.MiniJava
class java { public static java Main ( String [ ] java ) { { } } }
